--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ pyparted (3.6-1) UNRELEASED; urgency=low
   * debian/control:
     - New release is not compatible with python versions prior to 2.7, so
       bump X-Python-Version field to >= 2.7.
+    - Bump minimum version of python related packages to >= 2.6.6-13~ to
+      make sure python 2.7 is a supported python version.
 
- -- Luca Falavigna <dktrkranz@debian.org>  Sun, 27 Mar 2011 12:02:50 +0200
+ -- Luca Falavigna <dktrkranz@debian.org>  Sun, 27 Mar 2011 12:06:05 +0200
 
 pyparted (3.5-1) unstable; urgency=low
 
