--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pyparted (3.6-1) UNRELEASED; urgency=low
+pyparted (3.6-1) experimental; urgency=low
 
   * New upstream release.
   * debian/control:
@@ -7,7 +7,7 @@ pyparted (3.6-1) UNRELEASED; urgency=low
     - Bump minimum version of python related packages to >= 2.6.6-13~ to
       make sure python 2.7 is a supported python version.
 
- -- Luca Falavigna <dktrkranz@debian.org>  Sun, 27 Mar 2011 12:06:05 +0200
+ -- Luca Falavigna <dktrkranz@debian.org>  Sun, 27 Mar 2011 12:07:47 +0200
 
 pyparted (3.5-1) unstable; urgency=low
 
