--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pyparted (3.6-2) UNRELEASED; urgency=low
+
+  * debian/control:
+    - Bump Standards-Version to 3.9.2, no changes required.
+
+ -- Luca Falavigna <dktrkranz@debian.org>  Sat, 16 Apr 2011 15:35:11 +0200
+
 pyparted (3.6-1) experimental; urgency=low
 
   * New upstream release.
