--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+pyparted (3.6-3) UNRELEASED; urgency=low
+
+  * debian/control:
+    - Build-depend on dh-autoreconf.
+    - Drop autoconf, automake and libtool build-dependencies.
+  * debian/rules:
+    - Use autoreconf sequencer.
+
+ -- Luca Falavigna <dktrkranz@debian.org>  Thu, 21 Apr 2011 21:47:02 +0200
+
 pyparted (3.6-2) unstable; urgency=low
 
   * Upload to unstable.
