--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+pyparted (3.6-5) UNRELEASED; urgency=low
+
+  * debian/patches/no-last-flag-check.patch:
+    - Remove explicit *_LAST_FLAG checks, which impose additional interface
+      constraints not guaranteed by parted (closes: #697588).  We'll still
+      get parted exceptions for invalid flags, although they'll no longer be
+      ValueError.
+
+ -- Colin Watson <cjwatson@debian.org>  Mon, 07 Jan 2013 11:35:48 +0000
+
 pyparted (3.6-4) unstable; urgency=low
 
   * debian/patches/py26.patch:
