--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pyparted (3.6-6) UNRELEASED; urgency=low
+
+  [ Tim Gardner ]
+  * m4/python.m4 really wants the full path in the PYTHON environment
+    variable in order to correctly determine all multiarch include paths
+    (closes: #697779).  Thanks to Colin Watson for the suggestion.
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Wed, 09 Jan 2013 17:22:01 +0000
+
 pyparted (3.6-5) unstable; urgency=low
 
   * debian/patches/no-last-flag-check.patch:
